--- a/health/health.motivation/pom.xml
+++ b/health/health.motivation/pom.xml
@@ -37,6 +37,12 @@
 				<artifactId>ont.health</artifactId>
 				<version>1.1.1-SNAPSHOT</version>
 			</dependency>
+			
+			<dependency>
+				<groupId>org.universAAL.ontology</groupId>
+				<artifactId>ont.questionnaire</artifactId>
+				<version>1.1.1-SNAPSHOT</version>
+			</dependency>
 		<dependency>
             <groupId>org.drools</groupId>
             <artifactId>drools-core</artifactId>
