--- a/agenda/agenda.eventSelection.client/pom.xml
+++ b/agenda/agenda.eventSelection.client/pom.xml
@@ -64,7 +64,7 @@
 				<configuration>
 					<instructions>
 						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Activator>org.universAAL.agendaEventSelectionTool.client.Activator</Bundle-Activator>
+						<Bundle-Activator>org.universAAL.agendaEventSelectionTool.client.osgi.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Export-Package> org.universAAL.agendaEventSelectionTool.client</Export-Package>
