--- a/agenda/agenda.eventSelection.server/pom.xml
+++ b/agenda/agenda.eventSelection.server/pom.xml
@@ -13,6 +13,10 @@
 	<name>Agenda AAL Service Event Selection Tool Server</name>
 	<description>A server based on the domain ontology of event services</description>
 	<dependencies>
+		<!--		<dependency>-->
+		<!--			<groupId>junit</groupId>-->
+		<!--			<artifactId>junit</artifactId>-->
+		<!--		</dependency>-->
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
@@ -20,11 +24,6 @@
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.compendium</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.felix</groupId>
-			<artifactId>org.apache.felix.log</artifactId>
-			<version>1.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
@@ -36,7 +35,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.io</artifactId>
+			<artifactId>mw.bus.ui</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
@@ -55,10 +54,6 @@
 			<artifactId>agenda.eventSelection.ont</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.17</version>
@@ -73,7 +68,7 @@
 				<configuration>
 					<instructions>
 						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Activator>org.universAAL.agendaEventSelectionTool.server.Activator</Bundle-Activator>
+						<Bundle-Activator>org.universAAL.agendaEventSelectionTool.server.osgi.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Export-Package> org.universAAL.agendaEventSelectionTool.server</Export-Package>
@@ -86,13 +81,16 @@
 							bundle
 						-->
 						<Import-Package>
+							org.universAAL.agendaEventSelectionTool.server.osgi,
 							org.universAAL.middleware.container,
 							org.universAAL.middleware.container.osgi,
 							org.universAAL.middleware.container.osgi.util,
+							org.universAAL.middleware.container.utils,
 							org.universAAL.middleware.context,
 							org.universAAL.middleware.context.owl,
 							org.universAAL.middleware.owl,
 							org.universAAL.middleware.rdf,
+							org.universAAL.middleware.rdf.impl,
 							org.universAAL.middleware.service,
 							org.universAAL.middleware.service.owls.process,
 							org.universAAL.middleware.service.owls.profile,
@@ -121,7 +119,7 @@
 			<!--			</plugin>-->
 		</plugins>
 	</build>
-	
+
 	<profiles>
 		<profile>
 			<id>uAAL-Runtime</id>
@@ -169,6 +167,6 @@
 				</dependency>
 			</dependencies>
 		</profile>
-	</profiles>	
+	</profiles>
 
 </project>
