--- a/agenda/agenda.remote/bin/pom.xml
+++ b/agenda/agenda.remote/bin/pom.xml
@@ -77,7 +77,7 @@
         <configuration>
           <instructions>
             <Bundle-Name>${pom.name}</Bundle-Name>
-            <Bundle-Activator>org.universAAL.agenda.remote.Activator</Bundle-Activator>
+            <Bundle-Activator>org.universAAL.agenda.remote.osgi.Activator</Bundle-Activator>
             <Bundle-Description>${pom.description}</Bundle-Description>
             <Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
           </instructions>
