--- a/agenda/agenda.remote/pom.xml
+++ b/agenda/agenda.remote/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>agenda.pom</artifactId>
-		<version>A.0.1-SNAPSHOT</version>
+		<version>B.0.1-SNAPSHOT</version>
 		<relativePath>../agenda.pom/pom.xml</relativePath>
 	</parent>
 	<artifactId>agenda.remote</artifactId>
@@ -29,7 +29,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.io</artifactId>
+			<artifactId>mw.bus.ui</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
@@ -51,24 +51,6 @@
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>agenda.eventSelection.ont</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.ops4j.pax.logging</groupId>
-			<artifactId>pax-logging-api</artifactId>
-			<version>1.6.2</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.ops4j.pax.logging</groupId>
-			<artifactId>pax-logging-service</artifactId>
-			<version>1.6.2</version>
-			<scope>provided</scope>
-			<exclusions>
-				<exclusion>
-					<artifactId>log4j</artifactId>
-					<groupId>log4j</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -81,7 +63,7 @@
 					<instructions>
 						<Export-Package>org.universAAL.agenda.remote</Export-Package>
 						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Activator>org.universAAL.agenda.remote.Activator</Bundle-Activator>
+						<Bundle-Activator>org.universAAL.agenda.remote.osgi.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 					</instructions>
@@ -131,7 +113,7 @@
 				<dependency>
 					<groupId>org.universAAL.middleware</groupId>
 					<artifactId>mw.acl.upnp</artifactId>
-					<version>1.0.0</version>
+					<version>1.1.0</version>
 				</dependency>
 				<dependency>
 					<groupId>org.apache.felix</groupId>
