--- a/agenda/agenda.server/pom.xml
+++ b/agenda/agenda.server/pom.xml
@@ -97,23 +97,26 @@
 					<Bundle-Name>${project.name}</Bundle-Name>
 					<Bundle-Description>${project.description}</Bundle-Description>
 					<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-					<Bundle-Activator>org.universAAL.agenda.server.Activator</Bundle-Activator>
+					<Bundle-Activator>org.universAAL.agenda.server.osgi.Activator</Bundle-Activator>
 					<Export-Package>org.universAAL.agenda.server</Export-Package>
 					<Private-Package>org.universAAL.agenda.server.unit_impl,
 						org.universAAL.agenda.server.database,org.universAAL.agenda.server.gui.wrapper</Private-Package>
 					<Import-Package>
 						org.universAAL.middleware.container,
+						org.universAAL.agenda.server.osgi,
 						org.universAAL.middleware.container.osgi,
 						org.universAAL.middleware.container.osgi.util,
+						org.universAAL.middleware.container.utils,
 						org.universAAL.middleware.context,
 						org.universAAL.middleware.context.owl,
-						org.universAAL.middleware.input,
-						org.universAAL.middleware.io.owl,
-						org.universAAL.middleware.io.rdf,
+						org.universAAL.middleware.ui,
+						org.universAAL.middleware.ui.owl,
+						org.universAAL.middleware.ui.rdf,
 						org.universAAL.middleware.output,
 						org.universAAL.middleware.owl,
 						org.universAAL.middleware.owl.supply,
 						org.universAAL.middleware.rdf,
+						org.universAAL.middleware.rdf.impl,
 						org.universAAL.middleware.service,
 						org.universAAL.middleware.service.owls.process,
 						org.universAAL.middleware.service.owls.profile,
