agenda composite adapted from A.0.1 to B.0.1 2/2

--- a/agenda/agenda.pom/composite/pom.xml
+++ b/agenda/agenda.pom/composite/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>agenda.pom</artifactId>
-		<version>A.0.1-SNAPSHOT</version>
+		<version>B.0.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>agenda.composite</artifactId>
