--- a/new_services.pom/pom.xml
+++ b/new_services.pom/pom.xml
@@ -85,4 +85,24 @@
 		<url>${svn.base.url}${service.name.svn}%2F${project.artifactId}</url>
 	</scm>
 	
+	<build>
+	<pluginManagement>
+	 	<plugins>	 	
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<extensions>true</extensions>
+				<configuration>
+					<instructions>
+						<Bundle-Name>${project.name}</Bundle-Name>
+						<Bundle-Description>${project.description}</Bundle-Description>
+						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+						<Bundle-Version>${platform.version}</Bundle-Version>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
+	</pluginManagement>
+	</build>
+	
 </project>
