--- a/health/health.profile.manager/pom.xml
+++ b/health/health.profile.manager/pom.xml
@@ -11,10 +11,15 @@
   
   <groupId>org.universAAL.AALApplication</groupId>
   <artifactId>health.profile.manager</artifactId>
+  <version>1.1.0</version>
   <packaging>bundle</packaging>
 
   
-  <dependencies>	
+  <dependencies>
+  	<dependency>
+  		<groupId>org.universAAL.support</groupId>
+  		<artifactId>itests</artifactId>
+  	</dependency>  	
   	<dependency>
   		<groupId>org.universAAL.middleware</groupId>
   		<artifactId>mw.bus.service</artifactId>
@@ -50,7 +55,36 @@
 					</instructions>
 				</configuration>
 			</plugin>
+		      <plugin>
+		        <groupId>org.universAAL.support</groupId>
+		        <artifactId>uaal-maven-plugin</artifactId>
+		      </plugin>
+		      <plugin>
+		        <groupId>org.codehaus.mojo</groupId>
+		        <artifactId>build-helper-maven-plugin</artifactId>
+		        <configuration>
+		          <skipAttach>false</skipAttach>
+		        </configuration>
+		      </plugin>
 		</plugins>
 	</build>
-  
+    <profiles>
+    <profile>
+      <id>uAAL-Runtime</id>
+      <dependencies>
+	  	<dependency>
+	  		<groupId>org.universAAL.context</groupId>
+	  		<artifactId>ctxt.che</artifactId>
+	  		<version>1.1.0</version>
+            <scope>provided</scope>
+	  	</dependency>
+        <dependency>
+        	<groupId>org.universAAL.context</groupId>
+            <artifactId>ctxt.prof.server</artifactId>
+	  		<version>1.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
 </project>
