--- a/agenda/agenda.eventSelection.ont/pom.xml
+++ b/agenda/agenda.eventSelection.ont/pom.xml
@@ -44,10 +44,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.ui</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.data.representation</artifactId>
 		</dependency>
 		<dependency>
@@ -65,12 +61,6 @@
 			<groupId>activesoap</groupId>
 			<artifactId>jaxp-api</artifactId>
 			<version>1.3</version>
-		</dependency>
-		<!--		dependency for javax.xml.datatype-->
-		<dependency>
-			<groupId>com.googlecode.jinahya</groupId>
-			<artifactId>ocap-api</artifactId>
-			<version>1.2</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -93,6 +83,7 @@
 						<Bundle-Name>${project.name}</Bundle-Name>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+						<Bundle-Activator>org.universAAL.ontology.agendaEventSelection.osgi.Activator</Bundle-Activator>
 						<Export-Package>org.universAAL.ontology.agendaEventSelection.*</Export-Package>
 					</instructions>
 				</configuration>
