--- a/health/health.motivation/pom.xml
+++ b/health/health.motivation/pom.xml
@@ -14,8 +14,16 @@
 	
 	<name>Motivation Service</name>
 
-  <description/>
+  <properties>
+  		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compile.source>1.5</maven.compile.source>
+		<maven.compile.target>1.5</maven.compile.target>
+  	</properties>
     <dependencies>
+    <dependency>
+        	<groupId>org.universAAL.support</groupId>
+        	<artifactId>itests</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
@@ -72,7 +80,6 @@
 			<artifactId>ont.message</artifactId>
 			<version>1.1.1-SNAPSHOT</version>
         </dependency>
-		
         <dependency>
         	<groupId>net.sourceforge.javacsv</groupId>
         	<artifactId>javacsv</artifactId>
@@ -80,10 +87,28 @@
         	<type>jar</type>
         	<scope>compile</scope>
         </dependency>
+        <dependency>
+        	<groupId>org.universAAL.ontology</groupId>
+        	<artifactId>ont.disease</artifactId>
+        	<version>1.1.1-SNAPSHOT</version> 
+        </dependency>
+        
     </dependencies>
     
     <build>
 		<plugins>
+		 <plugin>
+                    <groupId>org.universAAL.support</groupId>
+                    <artifactId>uaal-maven-plugin</artifactId>
+              </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>build-helper-maven-plugin</artifactId>
+                    <configuration>
+                        <skipAttach>false</skipAttach>
+                    </configuration>
+                </plugin>
+		
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
