--- a/health/ont.health/pom.xml
+++ b/health/ont.health/pom.xml
@@ -75,6 +75,12 @@
 				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>ont.healthmeasurement</artifactId>
 			</dependency>
+			
+			<dependency>
+				<groupId>org.universAAL.ontology</groupId>
+				<artifactId>ont.disease</artifactId>
+				<version>1.1.1-SNAPSHOT</version>
+			</dependency>
     	</dependencies>
   	  <build>
 			<plugins>
