--- a/medication/medication.manager.ui.runner/runner/felix/config.ini
+++ b/medication/medication.manager.ui.runner/runner/felix/config.ini
@@ -72,11 +72,11 @@ felix.auto.start.5=\
 "file:bundles/ont.impairment_1.0.1.SNAPSHOT.jar" \
 "file:bundles/ui.dm.mobile_1.1.0.jar" \
 "file:bundles/ui.handler.gui_1.1.0.jar" \
-"file:bundles/medication.manager.ui_0.0.0.B_0_1-SNAPSHOT.jar" \
+"file:bundles/medication.manager.ui_1.1.0.jar" \
 "file:bundles/medication.manager.ont_1.1.1.SNAPSHOT.jar" \
-"file:bundles/medication.missing.services.simulation_0.0.0.B_0_1-SNAPSHOT.jar" \
-"file:bundles/medication.manager.service_0.0.0.B_0_1-SNAPSHOT.jar" \
-"file:bundles/medication.manager.shell.commands_0.0.0.B_0_1-SNAPSHOT.jar"
+"file:bundles/medication.missing.services.simulation_1.1.0.jar" \
+"file:bundles/medication.manager.service_1.1.0.jar" \
+"file:bundles/medication.manager.shell.commands_1.1.0.jar"
 
 ##############################
 # System properties
