--- a/health/ont.disease/pom.xml
+++ b/health/ont.disease/pom.xml
@@ -44,11 +44,11 @@
            		<groupId>org.universAAL.ontology</groupId>
            		<artifactId>ont.phWorld</artifactId>
        		</dependency>						
-			<dependency>
-				<groupId>org.universAAL.ontology</groupId>
-				<artifactId>ont.health</artifactId>
-				<version>1.1.1-SNAPSHOT</version>
-			</dependency>
+<!-- 			<dependency> -->
+<!-- 				<groupId>org.universAAL.ontology</groupId> -->
+<!-- 				<artifactId>ont.health</artifactId> -->
+<!-- 				<version>1.1.1-SNAPSHOT</version> -->
+<!-- 			</dependency> -->
     	</dependencies>
   	  <build>
 			<plugins>
