changed to version B.1.1-SNAPSHOT

--- a/health/health.pom/pom.xml
+++ b/health/health.pom/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<artifactId>new_services.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>B.0</version>
+		<version>B.1</version>
 		<relativePath>../../new_services.pom</relativePath>
 	</parent>
 
 	<artifactId>health.pom</artifactId>
-	<version>B.0.1-SNAPSHOT</version>
+	<version>B.1.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Health Management AAL Service</name>
@@ -26,8 +26,8 @@
 	<!-- Remember to rename health.pom folder (and super pom module reference) -->
 
 	<scm>
-		<connection>${svn.base}/health/${pom.artifactId}</connection>
-		<developerConnection>${svn.base}/health/${pom.artifactId}</developerConnection>
+		<connection>${svn.base}/health/${project.artifactId}</connection>
+		<developerConnection>${svn.base}/health/${project.artifactId}</developerConnection>
 	</scm>
 
 	<modules>
