--- a/health/health.profile.manager/pom.xml
+++ b/health/health.profile.manager/pom.xml
@@ -11,7 +11,7 @@
   
   <groupId>org.universAAL.AALApplication</groupId>
   <artifactId>health.profile.manager</artifactId>
-  <version>1.1.0</version>
+  <version>1.1.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   
@@ -81,7 +81,7 @@
         <dependency>
         	<groupId>org.universAAL.context</groupId>
             <artifactId>ctxt.prof.server</artifactId>
-	  		<version>1.1.0</version>
+	  		<version>1.1.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
       </dependencies>
