--- a/new_services.pom/pom.xml
+++ b/new_services.pom/pom.xml
@@ -10,7 +10,7 @@
 	
 	<groupId>org.universAAL.AALapplication</groupId>
 	<artifactId>new_services.pom</artifactId>
-	<version>B.0</version>
+	<version>B.1</version>
 	
 	<packaging>pom</packaging>
 	<name>Parent POM for all AAL services</name>
@@ -31,7 +31,7 @@
 		<maven.compile.source>1.5</maven.compile.source>
 		<maven.compile.target>1.5</maven.compile.target>
 		<gforge.project.name>new_services</gforge.project.name>
-		<platform.version>1.1.0</platform.version>
+		<platform.version>1.1.1-SNAPSHOT</platform.version>
 		<service.name.svn></service.name.svn>
 	</properties>
 	
