--- a/personal_safety/personal_safety.run/runner/felix/config.ini
+++ b/personal_safety/personal_safety.run/runner/felix/config.ini
@@ -71,11 +71,11 @@ felix.auto.start.5=\
 "file:bundles/ont.profile.health_1.0.1.SNAPSHOT.jar" \
 "file:bundles/ont.impairment_1.0.1.SNAPSHOT.jar" \
 "file:bundles/ui.dm.mobile_1.1.0.jar" \
-"file:bundles/ui.handler.gui_1.1.0.jar" \
-"file:bundles/personal_safety.sms_0.0.0.B_0_1-SNAPSHOT.jar" \
-"file:bundles/personal_safety.service_0.0.0.B_0_1-SNAPSHOT.jar"
-felix.auto.start.7="file:bundles/personal_safety.sw.panic_0.0.0.B_0_1-SNAPSHOT.jar"
-felix.auto.install.7="file:bundles/smp.test-location.publisher_0.0.0.B_0_1-SNAPSHOT.jar"
+"file:bundles/ui.handler.gui.swing_1.1.2.SNAPSHOT.jar" \
+"file:bundles/personal_safety.sms_1.1.0.jar" \
+"file:bundles/personal_safety.service_1.1.0.jar"
+felix.auto.start.7="file:bundles/personal_safety.sw.panic_1.1.0.jar"
+felix.auto.install.7="file:bundles/smp.test-location.publisher_1.1.0.jar"
 
 ##############################
 # System properties
