--- a/health/health.profile.manager/pom.xml
+++ b/health/health.profile.manager/pom.xml
@@ -5,20 +5,20 @@
   <parent>
   	<groupId>org.universAAL.AALapplication</groupId>
   	<artifactId>health.pom</artifactId>
-  	<version>B.1.1-SNAPSHOT</version>
+  	<version>B.0.1-SNAPSHOT</version>
   	<relativePath>../health.pom</relativePath>
   </parent>
-  
-  <groupId>org.universAAL.AALApplication</groupId>
+
   <artifactId>health.profile.manager</artifactId>
   <packaging>bundle</packaging>
+  <version>1.1.0</version>
 
-  
+
   <dependencies>
   	<dependency>
   		<groupId>org.universAAL.support</groupId>
   		<artifactId>itests</artifactId>
-        <version>1.1.2-SNAPSHOT</version>
+<!--         <version>1.1.2-SNAPSHOT</version> -->
   	</dependency>  	
   	<dependency>
   		<groupId>org.universAAL.middleware</groupId>
@@ -58,7 +58,7 @@
 		      <plugin>
 		        <groupId>org.universAAL.support</groupId>
 		        <artifactId>uaal-maven-plugin</artifactId>
-                <version>1.1.2-SNAPSHOT</version>
+		        <version>1.1.0</version>
 		      </plugin>
 		      <plugin>
 		        <groupId>org.codehaus.mojo</groupId>
@@ -82,7 +82,7 @@
         <dependency>
         	<groupId>org.universAAL.context</groupId>
             <artifactId>ctxt.prof.server</artifactId>
-	  		<version>1.1.1-SNAPSHOT</version>
+	  		<version>1.1.0</version>
             <scope>provided</scope>
         </dependency>
       </dependencies>
